--- a/language/en-GB/en-GB.mod_golemsocialbox.ini
+++ b/language/en-GB/en-GB.mod_golemsocialbox.ini
@@ -1,7 +1,7 @@
 ; 
 ; @package ElGolem
 ; @subpackage mod_golemsocialbox
-; @version   1.2.1 - 07/06/2012
+; @version   1.3.1 - 11/07/2012
 ; @author    Emmanuel Fontan
 ; @copyright (C) 2012 Emmanuel Fontan (email : fontanemmanel@gmail.com)
 ; 
@@ -93,3 +93,7 @@ MOD_GOLEMSOCIALBOX_RSS_URL = "Feed RSS URL"
 MOD_GOLEMSOCIALBOX_RSS_TEXT = "RSS Label Text"
 
 MOD_GOLEMSOCIALBOX_RSS_BUTTON_TEXT = "RSS Button Text"
+
+
+MOD_GOLEMSOCIALBOX_MODULECLASS_SFX = "Module Class Suffix"
+MOD_GOLEMSOCIALBOX_MODULECLASS_SFX_DESC = "A suffix to be applied to the CSS class of the module ('golemsocialbox'). This allows for individual module styling."
