--- a/language/es-ES/es-ES.mod_golemsocialbox.ini
+++ b/language/es-ES/es-ES.mod_golemsocialbox.ini
@@ -1,7 +1,7 @@
 ; 
 ; @package ElGolem
 ; @subpackage mod_golemsocialbox
-; @version   1.2.1 - 07/06/2012
+; @version   1.3.1 - 11/07/2012
 ; @author    Emmanuel Fontan
 ; @copyright (C) 2012 Emmanuel Fontan (email : fontanemmanel@gmail.com)
 ; 
@@ -95,3 +95,6 @@ MOD_GOLEMSOCIALBOX_RSS_TEXT = "Etiqueta de texto RSS"
 
 MOD_GOLEMSOCIALBOX_RSS_BUTTON_TEXT = "Etiqueta del bot&oacute;n RSS"
 
+
+MOD_GOLEMSOCIALBOX_MODULECLASS_SFX = "Clase CSS del m&oacute;dulo"
+MOD_GOLEMSOCIALBOX_MODULECLASS_SFX_DESC = "Un sufijo que aplicar en la clase CSS del m&oacute;dulo ('golemsocialbox'). Permite el estilo personalizado e individual del m&oacute;dulo."
